--- a/css/style.css
+++ b/css/style.css
@@ -647,6 +647,7 @@ img {
   margin-left: 10px;
   font-family: Roboto, Arial, sans-serif;
   font-size: 16px;
+  line-height: 22px;
   text-align: center;
   color: #283136;
   border: none;
