--- a/css/style.css
+++ b/css/style.css
@@ -570,6 +570,10 @@ img {
   border: none;
 }
 
+.filter-title {
+  letter-spacing: 0.01em;
+}
+
 .range-filter {
   width: 260px;
   margin-top: 49px;
