--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,7 @@ img {
 /*--------фильтр-----------*/
 .catalog-cover-columns {
   display: flex;
+  /* flex-wrap: wrap; */
   justify-content: space-between;
 }
 
@@ -582,7 +583,6 @@ img {
 .filter-item legend {
   font-size: 18px;
   line-height: 24px;
-  /* letter-spacing: 0,001em; */
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -793,6 +793,8 @@ img {
   color: #a9a9a9;
   box-shadow: inset 0 3px 0 0 #bfbfbf;
 }
+
+
 
 /*----------------карточки товаров------------*/
 .catalog {
