--- a/css/style.css
+++ b/css/style.css
@@ -794,7 +794,24 @@ img {
   box-shadow: inset 0 3px 0 0 #bfbfbf;
 }
 
+/*--------------сортировка карточек--------------------*/
 
+.filter-sort {
+  display: flex;
+  /* flex-wrap: wrap; */
+}
+
+.sorting-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sorting-buttons {
+  display: inline-block;
+}
+
+/*--------------сортировка карточек--------------------*/
 
 /*----------------карточки товаров------------*/
 .catalog {
