--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   /*вернуть фон после макросетки*/
   font-size: 16px;
   line-height: 24px;
-  }
+}
 
 /* body>* {
   background: rgba(255, 0, 0, 0.5);
@@ -24,7 +24,7 @@ body {
 body>*>* {
   background: rgba(225, 235, 223, 0.3);
 } */
- body>*>*>* {
+body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
 }
 
@@ -35,6 +35,7 @@ body>*>*>*>*>* {
 body>*>*>*>*>*>* {
   background: rgba(150, 110, 110, 0.3);
 }
+
 a {
   text-decoration: none;
 }
@@ -110,7 +111,6 @@ img {
 /* .site-navigation li {
   margin-left: 46px;
 } */
-
 .site-navigation li:first-child {
   margin-left: 0;
 }
@@ -401,7 +401,6 @@ img {
   font-size: 16px;
   text-transform: uppercase;
   margin-bottom: 24px;
-
 }
 
 .ability-list {
@@ -797,24 +796,36 @@ img {
 }
 
 /*--------------сортировка карточек--------------------*/
-
 .filter-sort {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
-.sorting-list {
+.sort-title {
+  min-width: 200px;
+}
+
+.sorting-type,
+.sorting-direction {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.sorting-buttons {
-  display: inline-block;
+.sorting-type {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 500px;
+  justify-content: space-between;
+}
+
+.sorting-direction {
+  display: flex;
+  width: 60px;
+
 }
 
 /*--------------сортировка карточек--------------------*/
-
 /*----------------карточки товаров------------*/
 .catalog {
   width: 760px;
@@ -833,7 +844,7 @@ img {
 
 .catalog-item img {
   vertical-align: top;
-  }
+}
 
 .catalog-item:nth-child(2n) {
   margin-right: 0;
@@ -962,10 +973,11 @@ img {
   background: none;
   /* border-color: solid 3px #dbdbdb; */
 }
-/*ненужное свойство*/ /*праило ниже дублирующиее,
+
+/*ненужное свойство*/
+/*праило ниже дублирующиее,
 можно оставить одно, только объединить свойства т.к.
 применяются к одному элементу*/
-
 .pagination-item-current a {
   border: solid 3px #dbdbdb;
 }
