--- a/css/style.css
+++ b/css/style.css
@@ -839,14 +839,40 @@ margin-left: 30px;
 .sorting-direction {
   display: flex;
   width: 60px;
+  background-color: blue;
 }
 
 .down,
 .up {
-width: 12px;
-height: 12px;
-border-color: #000000;
+  position: relative;
+  display: block;
+
 }
+
+.down::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border: solid 7px black;
+  border-right-color: transparent;
+  border-left-color: transparent;
+  border-top-width: 13px;
+  border-bottom: 0;
+  }
+
+  .up::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: solid 7px black;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    border-bottom-width: 13px;
+    border-top: 0;
+    margin-left: 15px;
+    }
 
 
 /*--------------сортировка карточек--------------------*/
