--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,7 @@ img {
   border-radius: 50%;
   box-shadow: 0 2px 1px 0 #cfcfcf;
   box-sizing: content-box;
+  cursor: pointer;
 }
 
 .range-controls .toggle-min {
@@ -658,10 +659,7 @@ img {
   border: none;
   border-radius: 5px;
   background: #f1f1f1;
-  border: none;
-  border-radius: 5px;
-  background: #f1f1f1;
-}
+  }
 
 .max-price {
   text-align: right;
