--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ img {
   left: 0;
   border-radius: 50%;
   border: 6px solid #ffffff;
-  background: radial-gradient(#ffffff 2px, #c1c1c1 2px, #c1c1c1 8px);
+  background: radial-gradient(#ffffff 2px, #c1c1c1 2px, #c1c1c1 9px);
 }
 
 .control-2,
@@ -1111,7 +1111,20 @@ opacity: 1;
   padding-bottom: 54px;
   background-image: url(../img/map/merged-map.png);
   background-position: 50% 50%;
+  position: relative;
+  }
+
+ iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  frameborder: 0;
+  style: border:0;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
+
 
 .wrapper-contacts {
   width: 319px;
@@ -1120,6 +1133,7 @@ opacity: 1;
   padding-right: 50px;
   padding-top: 54px;
   padding-bottom: 47px;
+  z-index: 1;
 }
 
 .contacts {
