--- a/css/style.css
+++ b/css/style.css
@@ -212,8 +212,8 @@ margin-left: 0;
 .sliders-controls a {
   display: inline-block;
   position: relative;
-  top: 9px;
-  left: 9px;
+  top: 7px;
+  left: 0px;
   z-index: 1;
   width: 18px;
   height: 18px;
@@ -228,13 +228,26 @@ margin-left: 0;
   height: 18px;
   left: 0;
   border-radius: 50%;
-  border: 6px solid #ffffff;
-  background: radial-gradient(#ffffff 2px, #c1c1c1 2px, #c1c1c1 9px);
+  background-color: inherit;
+  /* border: 6px solid #ffffff;
+  background: radial-gradient(#ffffff 2px, #c1c1c1 2px, #c1c1c1 9px); */
+}
+
+.active-control::after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  left: 5px;
+  top: 5px;
+  border: 2px solid #c1c1c1;
+  border-radius: 50%;
+  background-color: inherit;
 }
 
 .control-2,
 .control-3 {
-  margin-left: 9px;
+  margin-left: 16px;
 }
 
 
@@ -272,7 +285,7 @@ margin-left: 0;
 .features-slide-1 {
   background-image: url("../img/features-slide/slide1.png");
   background-repeat: no-repeat;
-  background-position: 93% 18px;
+  background-position: 93% 8px;
 }
 
 .features-slide-2 {
@@ -303,6 +316,7 @@ margin-left: 0;
   margin-bottom: 38px;
   max-width: 430px;
   color: #283136;
+  padding-left: 1px;
 }
 
 .button-info {
