--- a/css/style.css
+++ b/css/style.css
@@ -498,13 +498,16 @@ border-top: 2px solid #eeeeee;
 }
 
 .picture-nerds {
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
+  margin-bottom: 14px;
+  margin-top: 38px;
 }
 
 .progress-slogan {
   font-weight: 700;
   text-transform: uppercase;
   padding-left: 17px;
+  margin-bottom: 29px;
 }
 
 .progress-table {
@@ -516,23 +519,27 @@ border-top: 2px solid #eeeeee;
   font-size: 45px;
   font-weight: 700;
   line-height: 10px;
-  margin-top: 15px;
-  margin-bottom: 25px;
-}
+  }
 
 .value {
   line-height: 18px;
   color: #283136;
 }
 
-.procent td,
+.procent td {
+  padding-top: 20px;
+  padding-right: 22px;
+  padding-bottom: 36px;
+}
+
+/* .procent td,
 .value td {
   padding: 20px 0;
 }
 
 .procent td {
   padding-right: 25px;
-}
+} */
 
 .pocent-smb {
   vertical-align: super;
