откорректировал положение блоков с описанием карточек

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ body>*>*>*>*>* {
 body>*>*>*>*>*>* {
   background: rgba(150, 110, 110, 0.3);
 } */
-
 a {
   text-decoration: none;
 }
@@ -108,18 +107,18 @@ img {
   margin-top: 26px;
 }
 
- .site-navigation li {
+.site-navigation li {
   margin-right: 46px;
 }
 
 .site-navigation li:nth-child(2) {
-margin-right: 48px;
-margin-left: 0;
+  margin-right: 48px;
+  margin-left: 0;
 }
 
 .site-navigation li:nth-child(3) {
-margin-right: 45px;
-margin-left: 0;
+  margin-right: 45px;
+  margin-left: 0;
 }
 
 .site-navigation li:last-child {
@@ -153,7 +152,6 @@ margin-left: 0;
 /* .order li {
   width: 110px;
 } */
-
 .order .order-link {
   position: relative;
   padding-left: 50px;
@@ -250,8 +248,6 @@ margin-left: 0;
   margin-left: 16px;
 }
 
-
-
 /* .sliders-controls a {
   position: relative;
   display: inline-block;
@@ -274,7 +270,6 @@ margin-left: 0;
   background-color: #ffffff;
   border-radius: 50%;
 } */
-
 .features-slide {
   padding-top: 67px;
   padding-right: 0;
@@ -366,7 +361,7 @@ margin-left: 0;
 }
 
 .service-item-slogan-2 {
-padding-left: 2px;
+  padding-left: 2px;
 }
 
 .service-item-slogan-3 {
@@ -437,7 +432,7 @@ padding-left: 2px;
 .description-company {
   display: flex;
   margin-bottom: 56px;
-border-top: 2px solid #eeeeee;
+  border-top: 2px solid #eeeeee;
 }
 
 .wrapper-about {
@@ -521,7 +516,7 @@ border-top: 2px solid #eeeeee;
   font-size: 45px;
   font-weight: 700;
   line-height: 10px;
-  }
+}
 
 .value {
   line-height: 18px;
@@ -542,7 +537,6 @@ border-top: 2px solid #eeeeee;
 .procent td {
   padding-right: 25px;
 } */
-
 .procent-smb {
   vertical-align: super;
   font-size: 25px;
@@ -569,7 +563,7 @@ border-top: 2px solid #eeeeee;
 .partners-list li {
   position: relative;
   width: 260px;
-   /* margin-left: auto; */
+  /* margin-left: auto; */
   /* margin-right: auto;
   margin-bottom: 24px; */
   /*padding-left: 35px;
@@ -610,7 +604,6 @@ border-top: 2px solid #eeeeee;
   position: absolute;
   bottom: 27px;
 }
-
 
 .partners-list li:first-child::after {
   content: "";
@@ -671,7 +664,6 @@ border-top: 2px solid #eeeeee;
   margin-top: -11px;
   margin-bottom: 49px;
 }
-
 
 /*стили сложного фильтра*/
 .filter-item {
@@ -769,7 +761,7 @@ border-top: 2px solid #eeeeee;
   border: none;
   border-radius: 5px;
   background: #f1f1f1;
-  }
+}
 
 .max-price {
   text-align: right;
@@ -912,8 +904,7 @@ border-top: 2px solid #eeeeee;
   margin-bottom: 56px;
   /* margin-top: 60px; */
   margin-top: 5px;
-
-  }
+}
 
 .sort-title {
   min-width: 200px;
@@ -922,7 +913,7 @@ border-top: 2px solid #eeeeee;
   margin: 0;
   padding: 0;
   margin-top: -1px;
-  }
+}
 
 .sorting-type,
 .sorting-direction {
@@ -941,7 +932,7 @@ border-top: 2px solid #eeeeee;
 }
 
 .sorting-type li {
-margin-left: 26px;
+  margin-left: 26px;
 }
 
 .sorting-type li:first-child {
@@ -956,12 +947,12 @@ margin-left: 26px;
 .sorting-type a:hover,
 .sorting-type a:focus {
   color: #000000;
-opacity: 0.6;
+  opacity: 0.6;
 }
 
 .sorting-type a:active {
   color: #000000;
-opacity: 1;
+  opacity: 1;
 }
 
 .sorting-direction a {
@@ -984,14 +975,14 @@ opacity: 1;
   flex-wrap: wrap;
   width: 60px;
   margin-left: auto;
-  }
+}
 
 .down,
 .up {
   position: relative;
   width: 0;
   height: 0;
-  }
+}
 
 .down::before {
   content: "";
@@ -1000,17 +991,16 @@ opacity: 1;
   border-top: 13px solid #000000;
   margin-left: 18px;
   top: 3px;
-  }
+}
 
-  .up::before {
-    content: "";
-    position: absolute;
-    border: 7px solid transparent;
-    border-bottom: 13px solid #000000;
-    top: -5px;
-    margin-left: 46px;
-    }
-
+.up::before {
+  content: "";
+  position: absolute;
+  border: 7px solid transparent;
+  border-bottom: 13px solid #000000;
+  top: -5px;
+  margin-left: 46px;
+}
 
 /*--------------сортировка карточек--------------------*/
 /*----------------карточки товаров------------*/
@@ -1020,11 +1010,10 @@ opacity: 1;
 }
 
 .catalog-item {
+  position: relative;
   width: 360px;
   margin-bottom: 33px;
   margin-right: 40px;
-  position: relative;
-  text-align: center;
   border-top: 40px solid #eaeaea;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -1058,38 +1047,44 @@ opacity: 1;
   color: #b2b2b2;
 }
 
+.description-catalog-item {
+  position: absolute;
+  width: 360px;
+  line-height: 18px;
+  color: #666666;
+  background-color: #eeeeee;
+  bottom: 0;
+  text-align: center;
+  /* display: none; */
+}
+
+.description-sedona,
+.description-barber,
+.description-mishka {
+  padding: 0 81px;
+}
+
+.description-pink,
+.description-a,
+.description-kvast {
+  padding: 0 65px;
+}
+
 .description-catalog-item .catalog-item-topic {
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
   text-transform: uppercase;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 27px;
+  margin-bottom: 13px;
 }
 
 .description-catalog-item p {
-  margin-bottom: 28px;
-  margin-right: 67px;
-  margin-left: 69px;
-}
-
-.description-catalog-item {
-  line-height: 18px;
-  color: #666666;
-  display: none;
-  background-color: #eeeeee;
-  position: absolute;
-  width: 360px;
-  bottom: 0;
-}
-
-.pinc-card {
-  position: absolute;
-  top: 338px;
+  margin-bottom: 31px;
 }
 
 .button-price {
-  margin-bottom: 40px;
+  margin-bottom: 43px;
   width: 200px;
   margin-left: auto;
   margin-right: auto;
@@ -1129,7 +1124,7 @@ opacity: 1;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  margin-top:27px;
+  margin-top: 27px;
   padding-bottom: 60px;
   list-style: none;
 }
@@ -1196,9 +1191,9 @@ opacity: 1;
   background-image: url(../img/map/merged-map.png);
   background-position: 50% 50%;
   /* position: relative; */
-  }
+}
 
- /* iframe {
+/* iframe {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1209,13 +1204,12 @@ opacity: 1;
   z-index: 0;
 } */
 
-
 .wrapper-contacts {
   width: 319px;
   background-color: #ffffff;
   padding-left: 50px;
   padding-right: 50px;
-  /* padding-top: 54px; */
+
   padding-top: 51px;
   padding-bottom: 47px;
   /* z-index: 1; */
@@ -1409,10 +1403,8 @@ opacity: 1;
 /*-----------форма обратной связи конец-------*/
 .social-connection {
   display: flex;
-  /* padding-top: 70px; */
   padding-top: 37px;
   padding-bottom: 70px;
-
 }
 
 .footer-social {
@@ -1422,7 +1414,6 @@ opacity: 1;
   width: 260px;
   margin-top: 17px;
   align-items: center;
-
 }
 
 .for-friends {
