--- a/css/style.css
+++ b/css/style.css
@@ -1190,10 +1190,10 @@ img {
   padding-bottom: 55px;
   background-image: url(../img/map/merged-map.png);
   background-position: 50% 50%;
-  /* position: relative; */
+ position: relative;
 }
 
-/* iframe {
+iframe {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1201,8 +1201,9 @@ img {
   style: border:0;
   top: 0;
   left: 0;
-  z-index: 0;
-} */
+  z-index: 1;
+}
+
 .wrapper-contacts {
   width: 319px;
   background-color: #ffffff;
@@ -1210,7 +1211,8 @@ img {
   padding-right: 50px;
   padding-top: 51px;
   padding-bottom: 47px;
-  /* z-index: 1; */
+  z-index: 10;
+
 }
 
 .contacts {
@@ -1395,9 +1397,9 @@ color: #e74246;
   transform: rotate(-45deg);
 }
 
-/* .popup {
+ .popup {
 display: none;
-} */
+}
 /*-----------форма обратной связи конец-------*/
 .social-connection {
   display: flex;
