добавил код js для открытия/закрытия popup и тег с ссылкой на инт. карту в код страницы каталога

--- a/css/style.css
+++ b/css/style.css
@@ -1402,6 +1402,10 @@ color: #e74246;
  .popup {
 display: none;
 }
+
+.popup-show {
+  display: block;
+}
 /*-----------форма обратной связи конец-------*/
 .social-connection {
   display: flex;
