--- a/css/style.css
+++ b/css/style.css
@@ -1406,7 +1406,7 @@ display: none;
 .popup-show {
   display: block;
   animation-name: glide;
-  animation-duration: 1s;
+  animation-duration: 0.6s;
 }
 
 @keyframes glide {
@@ -1416,6 +1416,18 @@ display: none;
   70% {transform: translateX(30px);}
   90% {transform: translateX(-10px);}
   100% {transform: translateX(0);}
+}
+
+@keyframes shake {
+  0%, 100% {transform: translateX(0);}
+  10%, 30%, 50%, 70%, 90% {transform: translateX(-5px);}
+  20%, 40%, 60%, 80% {transition: translateX(5px);}
+
+  .modal-error {
+    animation-name: shake;
+    animation-duration: 1s;
+  }
+
 }
 /*-----------форма обратной связи конец-------*/
 .social-connection {
