--- a/css/style.css
+++ b/css/style.css
@@ -1197,8 +1197,7 @@ iframe {
   position: absolute;
   width: 100%;
   height: 100%;
-  frameborder: 0;
-  style: border:0;
+  border:0;
   top: 0;
   left: 0;
   z-index: 1;
