--- a/css/style.css
+++ b/css/style.css
@@ -1253,10 +1253,10 @@ iframe {
 
 /*--------форма обратной связи начало---------*/
 .popup {
-  display: block;
+
   position: fixed;
   left: 50%;
-  top: 50%;
+  top: 37%;
   margin-left: -480px;
   background-color: #ffffff;
   z-index: 10;
@@ -1267,6 +1267,7 @@ iframe {
   padding-bottom: 84px;
   box-shadow: 0 15px 20px 10px #5e5f5f;
   /* border: solid 1px #000; */
+  /* transform: translateY(-50%); */
 }
 
 .popup-form {
@@ -1353,6 +1354,7 @@ color: #e74246;
 border-color: #e74246;
 color: #e74246;
 } */
+
 .modal-button {
   display: block;
   width: 260px;
@@ -1400,6 +1402,7 @@ color: #e74246;
 
  .popup {
 display: none;
+/* transform: translateY(-50%); */
 }
 
 .popup-show {
@@ -1410,8 +1413,8 @@ display: none;
 
 @keyframes glide {
   0% {transform: translateX(-2000px);}
-  25% {transform: rotate(-90deg);}
-  50% {transform: rotate(360deg);}
+  /* 25% {transform: rotate(-90deg);}
+  50% {transform: rotate(360deg);} */
   70% {transform: translateX(30px);}
   90% {transform: translateX(-10px);}
   100% {transform: translateX(0);}
