--- a/css/style.css
+++ b/css/style.css
@@ -1426,13 +1426,18 @@ display: none;
 
 .modal-error {
   animation-name: shake;
-  animation-duration: 0.6s;
+  animation-duration: 0.3s;
 }
 
 @keyframes shake {
   0%, 100% {transform: translateX(0);}
-  10%, 30%, 50%, 70%, 90% {transform: translateX(-5px);}
-  20%, 40%, 60%, 80% {transition: translateX(5px);}
+  10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
+  20%, 40%, 60%, 80% {transition: translateX(10px);}
+}
+
+.invalid {
+  border-color: #e74246;
+  color: #e74246;
 }
 /*-----------форма обратной связи конец-------*/
 .social-connection {
