--- a/css/style.css
+++ b/css/style.css
@@ -1409,19 +1409,23 @@ display: none;
 /* transform: translateY(-50%); */
 }
 
+@keyframes glide {
+  0% {transform: translateX(-2000px);}
+  70% {transform: translateX(30px);}
+  90% {transform: translateX(-10px);}
+  100% {transform: translateX(0);}
+}
+
 .popup-show {
   display: block;
   animation-name: glide;
   animation-duration: 0.6s;
 }
 
-@keyframes glide {
-  0% {transform: translateX(-2000px);}
-  /* 25% {transform: rotate(-90deg);}
-  50% {transform: rotate(360deg);} */
-  70% {transform: translateX(30px);}
-  90% {transform: translateX(-10px);}
-  100% {transform: translateX(0);}
+@keyframes shake {
+  0%, 100% { transform: translateX(0); }
+  10%, 30%, 50%, 70%, 90% { transform: translateX(-10px); }
+  20%, 40%, 60%, 80% { transition: translateX(10px); }
 }
 
 .modal-error {
@@ -1429,13 +1433,7 @@ display: none;
   animation-duration: 0.3s;
 }
 
-@keyframes shake {
-  0%, 100% {transform: translateX(0);}
-  10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
-  20%, 40%, 60%, 80% {transition: translateX(10px);}
-}
-
-.invalid {
+.popup-form .invalid {
   border-color: #e74246;
   color: #e74246;
 }
